[tool.poetry]
name = "prueba_usuarios_completos"
version = "0.1.0"
description = ""
authors = ["Alexander Alcázar <aalcazarprogramacion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.129.0"
uvicorn = "^0.41.0"
SQLAlchemy = "^2.0.46"
psycopg2-binary = "^2.9.11"
dotenv = "^0.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
